syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "GrpcShared";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
	option (google.api.http) = {
		post: "/v1/greeter/{name}"
	};
  };
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
